src/objects/OpportunityLineItem.object
<CustomObject>
    <fields>
        <fullName>Consulting_Services__c</fullName>
        <inlineHelpText>Please select for Consulting Services</inlineHelpText>
        <label>Consulting Services</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PPC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conversion Tools</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Analytics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social Media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Integration Apps</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Importing Exporting</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Family__c</fullName>
        <formula>TEXT(PricebookEntry.Product2.Family)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Family</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Migration__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked by WF if it is a Catalog Transfer product.</description>
        <label>Is Catalog Transfer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>List_Price__c</fullName>
        <formula>ListPrice</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>List Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MRR__c</fullName>
        <description>MRR for use in Docusign Quotes</description>
        <formula>if(CONTAINS(PricebookEntry.Product2.Name, &apos;Plan&apos;), UnitPrice, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>MRR for use in Docusign Quotes</inlineHelpText>
        <label>MRR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>REPORTING_Product__c</fullName>
        <formula>PricebookEntry.Product2.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>REPORTING Product</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__ParentID__c</fullName>
        <inlineHelpText>ID of the opportunity product that came from this product&apos;s bundle.</inlineHelpText>
        <label>Parent ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__QuoteLine__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Quote line that generated this Opportunity Product.</description>
        <label>Quote Line</label>
        <referenceTo>SBQQ__QuoteLine__c</referenceTo>
        <relationshipLabel>Opportunity Product</relationshipLabel>
        <relationshipName>OpportunityProducts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Zuora_SubscriptionCharge_Id__c</fullName>
        <label>Zuora Subscription Charge Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tinderbox__Include_Content__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked it will include the associated TinderBox content for this product.</description>
        <label>Include Content</label>
        <type>Checkbox</type>
    </fields>
    <validationRules>
        <fullName>Orion_Product_Check</fullName>
        <active>true</active>
        <errorConditionFormula>Family__c == &apos;Orion Migration&apos; &amp;&amp; ISBLANK(Opportunity.Subscription__r.SBD_Store_ID__c )</errorConditionFormula>
        <errorMessage>Please enter a subscription eligible for Orion Migration</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Require_Forecast_Product_on_Upgrade_Opps</fullName>
        <active>true</active>
        <description>Require forecast opportunity products on upgrade opportunities</description>
        <errorConditionFormula>Opportunity.RecordTypeId=&apos;01213000000AV6N&apos;&amp;&amp;  not(ISPICKVAL(Product2.Family, &apos;Forecast&apos;))&amp;&amp; $Profile.Id &lt;&gt;&quot;00e30000001hS8e&quot;&amp;&amp; $Profile.Id &lt;&gt;&quot;00e30000001UsAz&quot;
/*Not Applicable for Api User &amp; Sys Admin */
/*Applicable for upgrade Store  Recordtype */</errorConditionFormula>
        <errorMessage>Only upgrade products can be added to upgrade opportunities - please only select products in the &quot;forecast&quot; family.</errorMessage>
    </validationRules>
</CustomObject>